--- a/springboot-security/springboot-security-broswer/src/main/resources/resources/login.html
+++ b/springboot-security/springboot-security-broswer/src/main/resources/resources/login.html
@@ -17,6 +17,10 @@
 					<td><input type="password" name="password"></td>
 				</tr>
 				<tr>
+					<td>验证图片：<input type="text" name="imagecode"></td>
+					<td><img src="/images/captcha"/></td>
+				</tr>
+				<tr>
 					<td colspan="2"><input name="submit" type="submit"
 						value="Login"></td>
 				</tr>
