--- a/springboot-security/springboot-security-broswer/src/main/resources/resources/login.html
+++ b/springboot-security/springboot-security-broswer/src/main/resources/resources/login.html
@@ -21,6 +21,29 @@
 					<td><img src="/images/captcha"/></td>
 				</tr>
 				<tr>
+					<td>记住我：</td>
+					<td><input type="checkbox" name="rememberMe" value = "true"></td>
+				</tr>
+				<tr>
+					<td colspan="2"><input name="submit" type="submit"
+						value="Login"></td>
+				</tr>
+			</tbody>
+		</table>
+	</form>
+	
+		<form name="f1" action="/peripheral/login" method="POST">
+		<table>
+			<tbody>
+				<tr>
+					<td>User:</td>
+					<td><input type="text" name="peripheralName" value=""></td>
+				</tr>
+				<tr>
+					<td>验证码：</td>
+					<td><input type="text"></td>
+				</tr>
+				<tr>
 					<td colspan="2"><input name="submit" type="submit"
 						value="Login"></td>
 				</tr>
