添加手机 验证码 登录 check 完善图片验证

--- a/springboot-security/springboot-security-broswer/src/main/resources/resources/login.html
+++ b/springboot-security/springboot-security-broswer/src/main/resources/resources/login.html
@@ -18,7 +18,7 @@
 				</tr>
 				<tr>
 					<td>验证图片：<input type="text" name="imagecode"></td>
-					<td><img src="/images/captcha"/></td>
+					<td><img src="/images/captcha?username=user"/></td>
 				</tr>
 				<tr>
 					<td>记住我：</td>
@@ -41,7 +41,7 @@
 				</tr>
 				<tr>
 					<td>验证码：</td>
-					<td><input type="text"></td>
+					<td><input type="text" name ="msgcode"></td>
 				</tr>
 				<tr>
 					<td colspan="2"><input name="submit" type="submit"
